--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 				<i class="far fa-clipboard"></i>
 			</button>
 		</div>
-
+		<br>
 		<div class="settings">
 			<div class="settings">
 				<label for="length"> Password Length</label>
-				<input type="number" id="length" min="4" max="20" value="20ss">
+				<input type="number" id="length" min="4" max="20" value="20">
 			</div>
 
 			<div class="settings">
@@ -44,7 +44,7 @@
 				<label for="symbols">Include symbols</label>
 				<input type="checkbox" id="symbols" checked>
 			</div>
-
+			<br>
 			<button class="btn btn-large" id="Generate">
 				Generate Password
 			</button>
