--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<input type="checkbox" id="symbols" checked>
 			</div>
 			<br>
-			<button class="btn btn-large" id="Generate">
+			<button class="btn btn-large" id="generate">
 				Generate Password
 			</button>
 		</div>
