--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 		<br>
 		<div class="settings">
 			<div class="settings">
-				<label for="length"> Password Length</label>
+				<label for="length"> Password length</label>
 				<input type="number" id="length" min="4" max="20" value="20">
 			</div>
 
 			<div class="settings">
-				<label for="uppercase">Include Uppercase Letters</label>
+				<label for="uppercase">Include uppercase letters</label>
 				<input type="checkbox" id="uppercase" checked>
 			</div>
 
 			<div class="settings">
-				<label for="lowercase">Include lowercase Letters</label>
+				<label for="lowercase">Include lowercase letters</label>
 				<input type="checkbox" id="lowercase" checked>
 			</div>
 
